# CVproject_Tree_Identification

./: CMakeLists.txt  README.md  project.cpp  trained_cnn.pb  treesDetection.cpp  treesDetection.h
CNN model/: project_CNN.ipynb
